[package]
name = "planning"
description = "A library allowing the planning of minimal sequences of actions to achieve a goal state."
version = "1.0.0"
edition = "2021"
authors = ["Felix Leitner <felix@felixleitner.com>"]
repository = "https://github.com/lixitrixi/planning"
keywords = ["goap", "ai", "action-planning", "game-ai"]
license = "MIT"

[dependencies]
pathfinding = "4.10.0"
bevy = { version = "0.14.1", default-features = false, optional = true }
serde = { version = "1.0.130", features = ["derive"], optional = true }
